config/k8s/monitoring/03_prometheus.yml
kind: Service
apiVersion: v1
metadata:
  name: prometheus-svc
  namespace: monitoring
  labels:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: monitoring
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: monitoring
  ports:
  - protocol: TCP
    port: 9090
    targetPort: 9090
