config/k8s/monitoring/04_grafana.yml
kind: Service
apiVersion: v1
metadata:
  name: grafana-svc
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: monitoring
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
