config/k8s/monitoring/02_prom.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: monitoring
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: prometheus
      app.kubernetes.io/part-of: monitoring
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prometheus
        app.kubernetes.io/part-of: monitoring
    spec:
      serviceAccountName: prometheus
      containers:
      - image: prom/prometheus:v2.24.1
        imagePullPolicy: IfNotPresent
        name: prometheus
        ports:
        - containerPort: 9090
          name: defaultxf
        resources:
            limits:
              cpu: 150m
              memory: 250Mi
        volumeMounts:
        - name: config-volume
          mountPath: /etc/prometheus 
        args:
        # defaults
        - --config.file
        - /etc/prometheus/prometheus.yml
        - --storage.tsdb.path
        - /prometheus
        - --web.console.libraries 
        - /usr/share/prometheus/console_libraries
        - --web.console.templates
        - /usr/share/prometheus/consoles
        # reduce retention period
        - --storage.tsdb.retention.time
        - 8d
      volumes:
      - name: config-volume
        configMap:
         name: prometheus-config
---
kind: Service
apiVersion: v1
metadata:
  name: prometheus-svc
  namespace: monitoring
  labels:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: monitoring
spec:
  selector:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: monitoring
  ports:
  - protocol: TCP
    port: 9090
    targetPort: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  labels:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-svc
            port:
              number:
                9090
