config/k8s/monitoring/05_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: https
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts: 
    - grafana.dyslav.it
    secretName: grafana-tls
  rules:
  - host: grafana.dyslav.it
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-svc
            port:
              number: 3000
